<resources>
    <!--  ENGLISH  -->
    <string name="app_name">FastNews</string>
    <string name="text_welcome">Welcome!</string>"
    <string name="hello_world">Hello World!</string>
    <string name="button_login">Login</string>
    <string name="button_register">Register</string>

    <string name="text_home">Home</string>
    <string name="text_search">Stocks</string>
    <string name="text_favorites">Favorite</string>
    <string name="text_profile">Profile</string>

    <string name="text_user">Username</string>
    <string name="text_new_user">Enter new username</string>
    <string name="text_email">Email</string>
    <string name="text_new_email">Enter new Email</string>
    <string name="text_password">Password</string>
    <string name="text_current_password">Current password</string>
    <string name="text_password_again">Password repeat</string>
    <string name="text_no_accout">You don`t have an account? Register now</string>
    <string name="text_have_account">You already have an account? Login</string>
    <string name="text_save_changes">Save changes</string>
    <string name="read_more">Read More</string>
    <string name="current_price">Current Price:</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="remove_to_favorites">Remove from Favorites</string>

    <string name="stock_current_price">Current Price: %.2f</string>
    <string name="stock_price_na">N/A</string>
    <string name="error_fetching_quote">Error fetching quote for %1$s: %2$s</string>
    <string name="remove_from_favorites">Remove from Favorites</string>
    <string name="added_to_favorites">%1$s added to favorites</string>
    <string name="removed_from_favorites">%1$s removed from favorites</string>
    <string name="remove">Remove</string>


</resources>