<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:enabled="true"
        android:icon="@drawable/home"
        android:title="@string/text_home" />

    <item
        android:id="@+id/navigation_search"
        android:enabled="true"
        android:icon="@drawable/stocks"
        android:title="@string/text_search" />

    <item
        android:id="@+id/navigation_favorites"
        android:enabled="true"
        android:icon="@drawable/favorite"
        android:title="@string/text_favorites" />

    <item
        android:id="@+id/navigation_profile"
        android:enabled="true"
        android:icon="@drawable/settings"
        android:title="@string/text_profile" />

</menu>