<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ProfileFragment"> <!-- Zamijenite s putanjom do vašeg ProfileFragmenta -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:paddingBottom="24dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="150dp">

        <!-- Placeholder za sliku profila -->
        <ImageView
            android:id="@+id/imageViewProfilePic"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginBottom="24dp"
            android:background="@color/placeholder_bg" />

        <!-- Promjena korisničkog imena -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_user"
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_marginBottom="4dp"/>

        <EditText
            android:id="@+id/editTextProfileUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_new_user"
            android:inputType="textPersonName"
            android:layout_marginBottom="16dp"/>

        <!-- Promjena emaila -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_email"
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_marginBottom="4dp"/>

        <EditText
            android:id="@+id/editTextProfileEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_new_email"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="16dp"/>

        <!-- Promjena lozinke -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_password"
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_marginBottom="4dp"/>

        <EditText
            android:id="@+id/editTextProfileCurrentPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_current_password"
            android:inputType="textPassword"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/editTextProfileNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_password"
            android:inputType="textPassword"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/editTextProfileConfirmNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_password_again"
            android:inputType="textPassword"
            android:layout_marginBottom="24dp"/>

        <Button
            android:id="@+id/buttonSaveChanges"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_save_changes"/>

    </LinearLayout>
</ScrollView>